# hikmicro

./: CMakeLists.txt
demo/linux/: DeviceBase.cpp  DeviceBase.h  GetStream.cpp  GetStream.h  Thermal.cpp  Thermal.h  main.cpp
include/: HCUsbSDK.h
